@@ -1282,3 +1282,4 @@
 ( cvs diff -u -r 1.149.2.45 -r 1.149.2.46 src/inc.c;  ) > 2.0.0cvs96.patchset
 ( cvs diff -u -r 1.18.2.28 -r 1.18.2.29 src/plugins/spamassassin/spamassassin.c;  ) > 2.0.0cvs97.patchset
 ( cvs diff -u -r 1.395.2.178 -r 1.395.2.179 src/summaryview.c;  ) > 2.0.0cvs98.patchset
+( cvs diff -u -r 1.18.2.29 -r 1.18.2.30 src/plugins/spamassassin/spamassassin.c;  ) > 2.0.0cvs99.patchset
