@@ -1,3 +1,9 @@
+2006-03-02 [wwp]	2.0.0cvs99
+
+	* src/plugins/spamassassin/spamassassin.c
+		make sync calls to sa-learn/spamc to prevent
+		system (whatever local or client/server) overload.
+
 2006-03-02 [colin]	2.0.0cvs98
 
 	* src/summaryview.c
